--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,17 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
     rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.css" />
+  <link rel="preconnect" href="https://app.snipcart.com">
+  <link rel="preconnect" href="https://cdn.snipcart.com">
 </head>
 
 <body>
   <app-root></app-root>
+
+  <script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script>
+  <div id="snipcart" data-api-key="MjA1ZmE1ZWUtZTg1YS00YTRiLWJiODQtMDE3YjNhYjNmMzc1NjM3MzkxODczMjUyNTY2Nzk3" hidden></div>
 </body>
 
 </html>
