--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,22 @@
   <meta charset="utf-8">
   <title>TS Waikato</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icons/Waikato%20Crest.png">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="assets/icons/Waikato%20Crest.png" rel="icon" type="image/x-icon">
   <link
     href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.css" />
-  <link rel="preconnect" href="https://app.snipcart.com">
-  <link rel="preconnect" href="https://cdn.snipcart.com">
+  <link href="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.css" rel="stylesheet"/>
+  <link href="https://app.snipcart.com" rel="preconnect">
+  <link href="https://cdn.snipcart.com" rel="preconnect">
 </head>
 
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 
-  <script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script>
-  <div id="snipcart" data-api-key="MjA1ZmE1ZWUtZTg1YS00YTRiLWJiODQtMDE3YjNhYjNmMzc1NjM3MzkxODczMjUyNTY2Nzk3" hidden></div>
+<script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script>
+<div data-api-key="MjA1ZmE1ZWUtZTg1YS00YTRiLWJiODQtMDE3YjNhYjNmMzc1NjM3MzkxODczMjUyNTY2Nzk3" hidden id="snipcart"></div>
 </body>
 
 </html>
